# BUET-E-Council

./: .gitignore  README.md  api.md  docker-compose.yml  podman-compose.yaml  pyrightconfig.json
auth_service/: index.js  routes.js
back-end/: .dockerignore  .env  Containerfile  Dockerfile  entrypoint.sh  pyproject.toml
back-end/app/: admin.py  config.py  database.py  dependencies.py  main.py  models.py  utils.py
back-end/app/api/: agendas.py  auth.py  files.py  health.py  meetings.py  participants.py  resolutions.py  signature_cards.py  users.py
back-end/app/schemas/: agendas.py  meetings.py  participants.py  resolutions.py  signature_cards.py
back-end/scripts/: db_manager.py  run_seed.py
back-end/scripts/seeds/: departments.py  faculties.py  participants.py  users.py
back-end/scripts/seeds/meetings/academic/: a_464.py  a_465.py  a_466.py  a_467.py  a_468.py  a_469.py
back-end/scripts/seeds/meetings/syndicate/: s_540.py
db/: demo.sql  init.sql
front-end/: .dockerignore  .gitignore  Containerfile  Dockerfile  package-lock.json  package.json  postcss.config.js  vite.config.js
front-end/src/: App.vue  main.js
front-end/src/components/: AgendaBox.vue  InsertStrip.vue  MeetingSection.vue  Navbar.vue  ParticipantCard.vue  ParticipantsSection.vue  PdfViewer.vue  RichTextEditor.vue  Sidebar.vue  SignatureCardItem.vue  SignatureCardsSection.vue
front-end/src/layouts/: MainLayout.vue
front-end/src/router/: index.js
front-end/src/store/: auth.js
front-end/src/utils/: alerts.js  api.js  validators.js
nginx/: nginx.conf
test/: auth_test.http
(+7 files in other folders)
