[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "fastapi-mail>=1.6.2",
    "itsdangerous>=2.2.0",
    "psycopg2-binary>=2.9.11",
    "pyotp>=2.9.0",
    "sqladmin>=0.23.0",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.41.0",
]
